# ultralytics_ros

./: .pre-commit-config.yaml  .prettierrc.yaml  CMakeLists.txt  README.md  package.xml  pyproject.toml  requirements.txt  requirements_edgetpu.txt  setup.py
.github/workflows/: pre-commit.yaml
docs/: README.md  edge_tpu_integration.md
launch/: demo.launch.py
src/ultralytics_ros/segmentation/: sam3.py  yolo.py
ultralytics_ros/: detector.py
